infra/k8s/hellgraph-superpeer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellgraph-superpeer
  labels:
    app: hellgraph-superpeer
    bundle: graph.twin
spec:
  selector:
    app: hellgraph-superpeer
  ports:
    - name: http
      port: 8850
      targetPort: 8850
